# readest

./: .gitignore  .gitmodules  Cargo.toml  apply-android-activity-fix.sh  pnpm-lock.yaml  pnpm-workspace.yaml  setup-android.sh
.github/workflows/: android-e2e.yml  macos-build.yml  nightly.yml  pull-request.yml  release.yml
.rpiv/artifacts/designs/: rust_tauri_indexing.md
.rpiv/artifacts/plans/: rust_tauri_indexing.md
apps/readest-app/: package.json  release-notes.json  vitest.config.mts
apps/readest-app/crates/manga-ocr/: Cargo.toml
apps/readest-app/crates/manga-ocr/src/: ctc.rs  detect.rs  lib.rs  lines.rs  models.rs  page.rs  pipeline.rs  preprocess.rs  recognize.rs  runtime.rs  session.rs  tokenizer.rs
apps/readest-app/crates/manga-ocr/tests-fixtures/: add_one.onnx
apps/readest-app/docs/superpowers/plans/: 2026-06-11-ai-summary.md  2026-06-11-openai-translation.md  2026-06-13-eink-manga-rendering.md  (+8 more)
apps/readest-app/scripts/: fetch-onnxruntime-jnilibs.sh  release-google-play.sh
apps/readest-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/readest-app/src-tauri/.cargo/: config.toml
apps/readest-app/src-tauri/capabilities/: default.json
apps/readest-app/src-tauri/icons/: icon.icns
apps/readest-app/src-tauri/plugins/tauri-plugin-eink/: .gitignore  Cargo.toml  build.rs
apps/readest-app/src-tauri/plugins/tauri-plugin-eink/android/: build.gradle.kts  proguard-rules.pro  settings.gradle
apps/readest-app/src-tauri/plugins/tauri-plugin-eink/android/src/main/java/com/readest/eink/: EinkPlugin.kt
apps/readest-app/src-tauri/plugins/tauri-plugin-eink/ios/: .gitignore  Package.swift
apps/readest-app/src-tauri/plugins/tauri-plugin-eink/ios/Sources/: EinkPlugin.swift
apps/readest-app/src-tauri/plugins/tauri-plugin-eink/permissions/: default.toml
apps/readest-app/src-tauri/plugins/tauri-plugin-eink/permissions/autogenerated/: reference.md
apps/readest-app/src-tauri/plugins/tauri-plugin-eink/permissions/autogenerated/commands/: do_epd_refresh.toml  get_epd_capabilities.toml  set_epd_mode.toml
apps/readest-app/src-tauri/plugins/tauri-plugin-eink/permissions/schemas/: schema.json
apps/readest-app/src-tauri/plugins/tauri-plugin-eink/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
apps/readest-app/src-tauri/src/: comic_parser.rs  lib.rs  ocr.rs
apps/readest-app/src/components/: UpdaterWindow.tsx
apps/readest-app/src/hooks/: useEpdPageRefresh.ts  useTranslator.ts
apps/readest-app/src/libs/: document.ts
apps/readest-app/src/services/: backupService.ts  bookService.ts  commandRegistry.ts  constants.ts
apps/readest-app/src/store/: aiChatStore.ts
apps/readest-app/src/types/: annotator.ts  book.ts
apps/readest-app/src/utils/: annotationToolbar.ts  book.ts  bridge.ts  bubbleOverlay.ts  comicArchive.ts  comicConvert.ts  comicConvertWeb.ts  comicPreload.ts  pageCapture.ts  pageImage.ts  style.ts  thumbnailCache.ts  webtoon.ts
apps/readest-app/tGD/map/: CONTEXT.md
docs/superpowers/plans/: 2026-06-18-comic-auto-translate-phase1.md  2026-06-20-manga-ocr-phase1b.md  2026-06-25-bubble-translate-fixed-layout.md  2026-06-25-int8-detector.md  2026-06-25-ocr-korean-chinese.md  2026-06-25-shared-detector-cache.md  2026-06-30-ocr-arena-memory.md  2026-06-30-ocr-mem-pattern.md  2026-07-01-detector-blk-only.md
docs/superpowers/specs/: 2026-06-18-manga-auto-translate-design.md  2026-06-20-manga-auto-translate-phase1b-design.md  2026-06-24-bubble-translate-fixed-layout-design.md  2026-06-25-int8-detector-design.md  2026-06-25-ocr-korean-chinese-design.md  2026-06-25-shared-detector-cache-design.md  2026-06-30-ocr-arena-memory-design.md  2026-06-30-ocr-mem-pattern-design.md  2026-07-01-detector-blk-only-design.md
tGD/map/: ANDROID-BUGS.md  CONTEXT.md
(+175 files in other folders)
