[package]
name = "manga-ocr"
version = "0.1.0"
edition = "2021"

[dependencies]
ort = { version = "2.0.0-rc.10", default-features = false, features = ["std", "ndarray", "download-binaries", "tls-rustls"] }
ndarray = { version = "0.17", features = ["std"] }
image = "0.25"
serde = { version = "1", features = ["derive"] }
